--- a/LuckyDream/LuckyDream/LuckyDream.csproj
+++ b/LuckyDream/LuckyDream/LuckyDream.csproj
@@ -170,6 +170,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
