--- a/LuckyDream/LuckyDream/packages.config
+++ b/LuckyDream/LuckyDream/packages.config
@@ -25,6 +25,7 @@
   <package id="popper.js" version="1.14.0" targetFramework="net45" />
   <package id="React.Web.Mvc4" version="4.1.1" targetFramework="net45" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
   <package id="Unity" version="5.10.3" targetFramework="net45" />
   <package id="Unity.Abstractions" version="4.1.3" targetFramework="net45" />
